--- a/front-project/package.json
+++ b/front-project/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.56.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
+    "react-select": "^5.10.1",
     "zod": "^3.24.4"
   },
   "devDependencies": {
